Updated project to allow Encryptor class to randomly create its own matrices so that the Encryptor class is entirely independant. Also added matrix_operations.py in order to aassist in finding the inverse of a matrix.

--- a/ProjectNotebook.ipynb
+++ b/ProjectNotebook.ipynb
@@ -16,14 +16,12 @@
     "- $A\\vec{x} ≡ \\vec{y} \\mod{256}$\n",
     "- $B\\vec{y} ≡ \\vec{x} \\mod{256}$\n",
     "\n",
-    "Furthermore, I wanted to be able to encrypt while having as little input from the user as possible. So, I made an encryptor generator that will make a random invertible matrix and return an Encryptor object that is defined by that random matrix and its inverse. In order to do that, one only has to call `generator.encryptor_generator()`. Once the Encryptor object has been made, you can use the `Encryptor.encrypt(str)` and `Encryptor.decrypt(str)` functions in order to encrypt and decrypt a string respectively. Everything else is handled within the function. Note that this only work for the characters with unicode values up to $256$ since otherwise there could be overflow issues. \n",
-    "\n",
-    "If one wanted to supply their own matrices, the constructor for the Encryptor class has two parameters: matrix and inverse. Both are numpy arrays. However, I do not recommend creating your own Encryptor object since that requires supplying two matrices that are inverses of each other modulo $256$. To spare anyone of having to perform the modular linear algebra required to do that, all that needs to be used is the `encryptor_generator()` function.\n",
+    "Furthermore, I wanted to be able to encrypt while having as little input from the user as possible. To accomplish this, I designed the Encryptor class in a way that randomly generates a valid matrix-inverse pair once an Encryptor object is made. Once the Encryptor object has been made, you can use the `Encryptor.encrypt(str)` and `Encryptor.decrypt(str)` functions in order to encrypt and decrypt a string respectively. Everything else is handled within the function. Note that this only work for the characters with unicode values up to $256$ since otherwise there could be overflow issues. \n",
     "\n",
     "All of the functions/methods I have written are:\n",
     "\n",
-    "- `generator.encryptor_generator()`: \n",
-    "    - Returns an Encryptor object\n",
+    "- `Encryptor.matrix_generator()`: \n",
+    "    - Returns two numpy arrays matrix,inverse that are valid inverses of each other.\n",
     "    <p>&nbsp;</p>\n",
     "- `Encryptor.encrypt(str)`: \n",
     "    - An instance method that accepts a string str and returns a string encryption of str.\n",
@@ -31,17 +29,34 @@
     "- `Encryptor.decrypt(str)`: \n",
     "    - An instance method that accepts a string str and returns the string decryption of str.\n",
     "    <p>&nbsp;</p> \n",
-    "- `generator.gcd_extended(m, n)`: \n",
+    "- `Encryptor.gcd_extended(m, n)`: \n",
     "    - Takes two integers m,n and returns gcd, x, y where:\n",
     "        - gcd is the greatest common divisor of m and n\n",
     "        - x is the Bezozut coefficient of m\n",
     "        - y is the Bezout coefficient of n\n",
+    "        <p>&nbsp;</p> \n",
+    "- `matrix_operations.cofactor(np, i, j)`:\n",
+    "    - Takes in a numpy array and indices i,j and calculates the cofactor for the entry located at row i and column j.\n",
+    "    <p>&nbsp;</p> \n",
+    "- `matrix_operations.determinant(np)`:\n",
+    "    - Takes in a numpy array and calculates the determinant if it is square or raises an exception if it is not square.\n",
+    "    <p>&nbsp;</p> \n",
+    "- `matrix_operations.submatrix(np, i, j)`:\n",
+    "    - Takes in a numpy array and indices i,j and returns a submatrix where the ith row and jth column of np are deleted.\n",
+    "    <p>&nbsp;</p> \n",
+    "- `matrix_operations.transpose(np)`:\n",
+    "    - Takes in a numpy array and returns the transpose as a numpy array.\n",
+    "    <p>&nbsp;</p> \n",
+    "- `matrix_operations.adjoint(np)`:\n",
+    "    - Takes in a numpy array and returns the adjoint as a numpy array.\n",
+    "    <p>&nbsp;</p> \n",
     "        \n",
-    "An interesting piece of information is about how I made the `encryptor_generator()` function. Within the function, there is a `while` loop that terminates when the greatest common divisor of the determinant of the randomly generated matrix and $256$ is $1$. This is necessary to determine if an inverse exists for the matrix. However this begs the question: what will happen if the greatest common divisor is never $1$? In theory, this would mean the loop would never end.\n",
+    "An interesting piece of information is about how I made the `matrix_generator()` function. Within the function, there is a `while` loop that terminates when the greatest common divisor of the determinant of the randomly generated matrix and $256$ is $1$. This is necessary to determine if an inverse exists for the matrix. However this begs the question: what will happen if the greatest common divisor is never $1$? In theory, this would mean the loop would never end.\n",
     "\n",
     "However, this is highly unlikely. Consider the probability of generating a valid matrix after exactly $k$ iterations. Since $2^8$ is the prime factorization of $256$, this means that $\\gcd(256,a)=1$ $\\iff a$ is odd. If we assume there is a uniform distribution across all possible determinants, then we have that the probability of receiving an invalid matrix is $\\frac{128}{256}=\\frac{1}{2}$ at each iteration. Therefore, the probability of receiving a valid matrix after $k$ iterations is $P(k)=\\frac{1}{2^k}=2^{-k}$.\n",
     "\n",
-    "For reference, let's say we want to know how likely it is that the while loop ran for $20$ iterations. Then $P(20)=2^{-20}\\approx 0.00000095$. As you can see, this is highly unlikely. In fact, the expected number of iterations in total is $2$. Now for infinitely many iterations, we have $\\lim_\\limits{k\\to \\infty}P(k)=\\lim_\\limits{k\\to \\infty}2^{-k}=0$. Therefore in practice, this will most likely never happen.\n",
+    "For reference, let's say we want to know how likely it is that the while loop ran for $20$ iterations. Then $P(20)=2^{-20}\\approx 0.00000095$. As you can see, this is highly unlikely. In fact, the expected number of iterations in total is $2$. Now for infinitely many iterations, we have: $$\\lim_{k \\to \\infty} P(k) = \\lim_{k \\to \\infty} 2^{-k} = 0$$\n",
+    "Therefore in practice, this will most likely never happen.\n",
     "\n",
     "Now I know the math is interesting, but it is best to see this code work in practice. Below is a demonstration of how creating multiple Encryptor objects will lead to different encryption results but will ultimately still allow the encoded messages to be decrypted. "
    ]
@@ -62,7 +77,8 @@
    "outputs": [],
    "source": [
     "# Import the functions that are used in this project.\n",
-    "from my_module.generator import encryptor_generator"
+    "from my_module.Encryptor import Encryptor\n",
+    "from random import randrange"
    ]
   },
   {
@@ -83,8 +99,7 @@
       "Encryptor 1:\n",
       "\n",
       "  After encryption:\n",
-      "  \u0001\u000fnØåñpVËX¨O¦\\NÎxañpVËA£O¡QY·w\u001e",
-      "¸Í\n",
+      "  \u0001øè÷3'a=\u001aHsZR\u000eç{H.f©ªÈHÈW>¯\"PzI\n",
       "\n",
       "  After decryption:\n",
       "  May your heart be your guiding key!\n",
@@ -93,8 +108,7 @@
       "Encryptor 2:\n",
       "\n",
       "  After encryption:\n",
-      "  \u0001?íVRup\u0018¨Ï ÖÉ^Rup\r",
-      "w<·7ñ39;gU&\n",
+      "  \u0001°ô­ÁW\u001fþ]VP\\Dj^X°\t©­i?àåìLöÿÌì\n",
       "\n",
       "  After decryption:\n",
       "  May your heart be your guiding key!\n",
@@ -103,7 +117,7 @@
       "Encryptor 3:\n",
       "\n",
       "  After encryption:\n",
-      "  \u0001¹`§3¡2×yPH¡hZìb;×¡2×yj÷Á r\u0005\\\u0002;1\u0000?K\n",
+      "  \u0000õðoa97×S8Û{kYÛ\u0011p_ÎÝj«c\u001ahð)®ÔD\u0015\n",
       "\n",
       "  After decryption:\n",
       "  May your heart be your guiding key!\n",
@@ -112,7 +126,7 @@
       "Encryptor 4:\n",
       "\n",
       "  After encryption:\n",
-      "  \u0001êí³ÃHÕ-SX\u0010òubÞ6<W§HÕ-S}Âz|éúzÅ»\n",
+      "\u0004×\u0017t\u0001\u0018¤åµMñ\u001a:«\u0002ê¤>WTí\u001dC\u001fDé¤¤N\n",
       "\n",
       "  After decryption:\n",
       "  May your heart be your guiding key!\n",
@@ -121,8 +135,8 @@
       "Encryptor 5:\n",
       "\n",
       "  After encryption:\n",
-      "  \u0001ÉF&#kL\u0014õ88ÙÎ\b26\u000eî\u0007kL\u0014õ\r",
-      "1¶»k\u0001k¹Máv6û\n",
+      "  \u0001ØA>ñhY&»\u0011süv¢\n",
+      "¨®2Ó7ãóØÈ9ZbôIè~\n",
       "\n",
       "  After decryption:\n",
       "  May your heart be your guiding key!\n",
@@ -131,7 +145,8 @@
       "Encryptor 6:\n",
       "\n",
       "  After encryption:\n",
-      "  \u0001çÛ»&KyOØà¯ë¶°@\u001a?îKyOØpË_3\\º?0¿/£3ö\n",
+      "  \u0001é\u0004G\u001d×ô0åAº:\u0000gÛ\u0002á\u001c\u0016\u0011½FàÒÔÁcÉ®\n",
+      "_o~9\n",
       "\n",
       "  After decryption:\n",
       "  May your heart be your guiding key!\n",
@@ -140,7 +155,7 @@
       "Encryptor 7:\n",
       "\n",
       "  After encryption:\n",
-      "  \u0001=Iá»A|\u0000xµê\u0018\u00189\u0006á»A|¥å\u0011Ð©tñUaen\n",
+      "  \u0000Óo1ã+\u0019±²zwÅ\u00034ú·\u0012\u001b\u0014*2¿íR\u001dì=ÎgÿNx}R\n",
       "\n",
       "  After decryption:\n",
       "  May your heart be your guiding key!\n",
@@ -149,7 +164,8 @@
       "Encryptor 8:\n",
       "\n",
       "  After encryption:\n",
-      "  \u0001§\u001aÞÙ½¼X?¨h÷2°V\u0002ZFÅ½¼X?7;_ªQÙ;\tûïjîá\n",
+      "  \u0001ÁSbÒVëí¢DW®\n",
+      "â°1Ý¡àv}Îy¦¿\u0010E6\u001aAÎ\n",
       "\n",
       "  After decryption:\n",
       "  May your heart be your guiding key!\n",
@@ -158,7 +174,7 @@
       "Encryptor 9:\n",
       "\n",
       "  After encryption:\n",
-      "  \u0001CRE«+0%e0Ø{ÒÔVÁï+0%eöí\u001b\"^\u000f,\u0017Þë¢C\n",
+      "  \u0001Ìg0ô#{Ô/Þh]^ö\"\\x£,¶/s³Øa5{\u0002çÄoÅ0\n",
       "\n",
       "  After decryption:\n",
       "  May your heart be your guiding key!\n",
@@ -167,8 +183,7 @@
       "Encryptor 10:\n",
       "\n",
       "  After encryption:\n",
-      "  \u0001y÷r»\u0003;ØoØ`©¿0ö\u001e",
-      "`Ê?\u0003;Øo¹àÁïÿì\u0015*5à¿â3\n",
+      "  \u0001/S4Êì(Ç\u000fM¡\u001aÇRÀäÀ\u0013Ó\\\f'm\u0018é\u0014\u0014.?3ÆÑI\n",
       "\n",
       "  After decryption:\n",
       "  May your heart be your guiding key!\n",
@@ -180,7 +195,7 @@
    "source": [
     "# Define the number of encryptor objects to make.\n",
     "num_of_encryptors = 10\n",
-    "encryptors = [encryptor_generator() for e in range(num_of_encryptors)]\n",
+    "encryptors = [Encryptor(randrange(5) + 2) for e in range(num_of_encryptors)]\n",
     "\n",
     "# Message to be encoded. This can only include characters within the first 256 Unicode values.\n",
     "message = 'May your heart be your guiding key!'\n",
@@ -228,15 +243,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform linux -- Python 3.9.5, pytest-8.0.2, pluggy-1.4.0\n",
-      "rootdir: /home/r2suarez/Hill-Cipher\n",
-      "plugins: anyio-3.2.1\n",
-      "collected 6 items                                                              \u001b[0m\n",
+      "\u001b[1m============================= test session starts =============================\u001b[0m\n",
+      "platform win32 -- Python 3.8.8, pytest-8.3.3, pluggy-1.5.0\n",
+      "rootdir: c:\\Users\\sonic\\Documents\\Projects\\Hill-Cipher\n",
+      "plugins: anyio-4.3.0\n",
+      "collected 3 items\n",
       "\n",
-      "my_module/test_functions.py \u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m                                       [100%]\u001b[0m\n",
+      "my_module\\test_functions.py \u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m                                          [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m6 passed\u001b[0m\u001b[32m in 0.60s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
+      "\u001b[32m============================== \u001b[32m\u001b[1m3 passed\u001b[0m\u001b[32m in 9.75s\u001b[0m\u001b[32m ==============================\u001b[0m\n"
      ]
     }
    ],
@@ -249,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Extra Credit (*optional*)\n",
+    "#### Background\n",
     "\n",
     "I do have a fairly large amount of programming experience. Of all the programming languages I know (Java, MATLAB, C, C++, Python) Python is the one I have the least amount of experience with. One hurdle that I had to overcome was in how to represent matrices as a numpy array. After working on this project though, I have discovered that much of the arithmetic works similarily to MATLAB so adjusting was not an overly difficult thing to do. I feel that my project has gone above and beyond the project requirements because I was able to provide a method of encryption that is not a simple substitution of characters, leans heavily into my background in mathematics, and offers users an easy way to access a complex encryption strategy without having to understand the modular linear algebra behind it. Furthermore, I had to make a decision over whether a while loop approach was worth doing. After calculating the likelihood that a loop would run for many iterations, I decided that my approach would work well which is something I have never done before."
    ]
@@ -257,7 +272,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -271,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
